src-tauri/error.txt
    Checking voice-robot v1.0.0 (D:\Ming\voice_robot\src-tauri)
warning: unused import: `tokio::sync::Mutex`
 --> src\livekit_manager.rs:3:5
  |
3 | use tokio::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> src\livekit_manager.rs:32:61
   |
32 |                         if let Ok(text) = String::from_utf8(payload) {
   |                                           ----------------- ^^^^^^^ expected `Vec<u8>`, found `Arc<Vec<u8>>`
   |                                           |
   |                                           arguments to this function are incorrect
   |
   = note: expected struct `Vec<_>`
              found struct `Arc<Vec<_>>`
note: associated function defined here
  --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\alloc\src\string.rs:560:11
help: try using a conversion method
   |
32 |                         if let Ok(text) = String::from_utf8(payload.to_vec()) {
   |                                                                    +++++++++

For more information about this error, try `rustc --explain E0308`.
warning: `voice-robot` (lib) generated 1 warning
error: could not compile `voice-robot` (lib) due to 1 previous error; 1 warning emitted
